Fix: sticker #11 alignment is off

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11691,8 +11691,8 @@ a.text-dark:focus {
 }
 
 #resultBasefree-male-11 {
-  left: -15%;
-  top: 1%;
+  left: -36px;
+  top: 1px;
 }
 
 #resultBasefree-male-11 > img {
